[tool.poetry]
name = "airbnb-clone-backend"
version = "0.1.0"
description = ""
authors = ["니꼬 <nico@nomadcoders.co>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
Django = "~4.0"
djangorestframework = "^3.13.1"


PyJWT = "^2.4.0"
django-environ = "^0.9.0"
django-cors-headers = "^4.2.0"
requests = "^2.31.0"
dj-database-url = "^2.0.0"
psycopg2-binary = "^2.9.6"
whitenoise = {extras = ["brotli"], version = "^6.5.0"}
gunicorn = "^21.2.0"

[tool.poetry.dev-dependencies]
black = {version = "^22.6.0", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"